--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=IBM+Plex+Sans:wght@300&family=Inter:wght@300;600;700;800;900&family=Open+Sans:wght@500;700;800&family=Passion+One:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@600;700;800;900&family=IBM+Plex+Sans:wght@300;400;500&family=Inter:wght@300;600;700;800;900&display=swap');
 
-/* https://fonts.google.com/share?selection.family=Archivo%20Black%7CIBM%20Plex%20Sans:wght@300%7CInter:wght@300;600;700;800;900%7COpen%20Sans:wght@500;700;800%7CPassion%20One:wght@400;700 */
+/* https://fonts.google.com/share?selection.family=Archivo:wght@600;700;800;900%7CIBM%20Plex%20Sans:wght@300;400;500%7CInter:wght@300;600;700;800;900 */
 
 :root {
     --page-padding: 150px;
@@ -8,18 +8,12 @@
     --header-height: 100px;
     --footer-height: 100px;
     --brand-color: #5865F2;
-    /* 400 */
-    --font-ginto-nord-variation-1: 'Archivo Black', sans-serif;
-    /* 400 700 */
-    --font-ginto-nord-variation-2: 'Passion One', cursive;
-    /* 300 */
-    --font-code: 'IBM Plex Sans', sans-serif;
-    /* 300 */
-    --font-normal: 'Inter', sans-serif;
-    /* 500 700 800 */
-    --font-normal-variation-1: 'Open Sans', sans-serif;
     /* 600 700 800 900 */
-    --font-normal-variation-2: 'Inter', sans-serif;
+    --font-ginto-nord-variation-1: 'Archivo', sans-serif;
+    /* 300 400 500 */
+    --font-code: 'IBM Plex Sans', sans-serif;
+    /* 300 600 700 800 900 */
+    --font-normal: 'Inter', sans-serif;
 }
 
 .light {
@@ -27,10 +21,10 @@
     --text-contrast: #FFFFFF;
     --text-muted: #747F8D;
     --main-background: #FFFFFF;
-    --sidebar-background: #F1F1F1;
+    --sidebar-background: #F2F3F5;
     --element: #FFFFFF;
     --element-contrast: #36393F;
-    --code-block-background: #F1F1F1;
+    --code-block-background: #F2F3F5;
 
     /* Codeblock colors */
     /* From
